[package]
name = "rust-inverter2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls" ], default-features = false}
tokio = { version = "1", features = ["full"] }
rppal = "0.13.1"
log = "0.4"
pretty_env_logger = "0.3"
